# textx-lang-questionnaire

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  runtests.sh  setup.cfg  setup.py
tests/: example.que  example.qus  test_example.py  test_interpret.py
txquestionnaire/: __init__.py  questionnaire.tx
