[metadata]
name = textx-lang-questionnaire
author = Igor R. Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = A DSL for describing questionnaires
keywords = textX; language; DSL
url = https://github.com/textX/textx-lang-questionnaire
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = txquestionnaire
zip_safe = False
install_requires = textX
include_package_data = True
package_dir =
    txquestionnaire = txquestionnaire

[options.extras_require]
dev =
    twine
test =
    flake8
    coverage
    coveralls
    pytest

[options.entry_points]
textx_languages =
    questionnaire = txquestionnaire:questionnaire

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*, dist/*, build/*, venv/*